# BidirectionalWoS

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
src/: CMakeLists.txt  FinalGatherWoS.h  ForwardWoS.h  ReverseWoS.cpp  ReverseWoS.h  main.cpp
src/Core/: Boundary.cpp  Boundary.h  Common.cpp  Common.h  ImageBuffer.h  PDE.h  Scene.cpp  Scene.h  SolverWoS.h  Source.h
